[package]
name = "ghstats"
version = "0.7.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["axum"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
serde_variant = "0.1.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thousands = "0.2.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-logfmt = { version = "0.3.7", features = ["ansi_logs"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints.rust]
dead_code = "allow"

[profile.dev]
debug = 0

[profile.release]
strip = true
